Do not loop infinitely if a span is larger than the layout extent

There is no point in searching through all cells to see if an item of
columnSpan 3 fits into a layout with 2 columns, since it won't ever
fit.
So instead we detect this case early and ignore the item for
inclusion.

Task-number: QTBUG-35778

Change-Id: I3f7963df17b05b3eb14ba0bae49e5a885d15b33b
Reviewed-by: Jens Bache-Wiig <jens.bache-wiig@digia.com>